--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+
 * {
   box-sizing: border-box;
 }
 
 body {
+  background-color: #686de0;
   font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: column;
@@ -12,4 +14,48 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+  padding: 20px;
+}
+
+.container {
+  background-color: white;
+  border-radius: 10px; /* rounded corners */
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
+  padding: 50px 20px; /* enlarging container */
+  text-align: center;
+  max-width: 100%;
+  width: 800px;
+}
+
+h3 {
+  margin: 0;
+  opacity: 0.5; /* give transperent look */
+  letter-spacing: 2px;
+}
+
+.joke {
+  font-size: 30px;
+  letter-spacing: 1px;
+  line-height: 40px;
+  margin: 50px auto; /* 50 top & bottom, auto for left right*/
+  max-width: 600px;
+}
+
+.btn {
+  background-color: #9f68e0;
+  color: #fff;
+  border: 0;
+  border-radius: 10px; /*rounded */
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
+  padding: 14px 40px;
+  font-size: 16px;
+  cursor: pointer; /* cursor changes to pointer when ontop*/
+}
+
+.btn:active {
+  transform: scale(0.98);
+}
+
+.btn:focus {
+  outline: 0;
 }
